--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "googleapis": "^140.0.1",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
+    "next-auth": "^4.24.7",
     "patch-package": "^8.0.0",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
